--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Soft R Investment</title>
     <link rel="stylesheet" href="./commonStyle.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
@@ -393,7 +393,6 @@
         </div>
     </section>
 
-    <!-- footer -->
     <footer>
         <div class="joinSection">
             <div class="joinDesc">
@@ -402,9 +401,10 @@
                     Once you have created your account, you can purchase coins from website
                 </p>
             </div>
-            <button class="btn primaryBtn">JOIN NOW</button>
+            <a href="https://www.softrinvestment.online/sign-in" class="btn primaryBtn">JOIN NOW</a>
         </div>
-
+<script src="https://widgets.coingecko.com/gecko-coin-price-chart-widget.js"></script>
+<gecko-coin-price-chart-widget locale="en" dark-mode="true" transparent-background="true" outlined="true" initial-currency="zar"></gecko-coin-price-chart-widget>
         <div class="footerlinksContainer">
             <div class="footerAboutus">
                 <img src="./img/logo-white.png" alt="">
@@ -422,18 +422,12 @@
 
             <div class="footerlink">
                 <h1 class="linkTitle">Explore</h1>
-                <a href="#" class="eachLink">About us</a>
-                <a href="#" class="eachLink">FAQ</a>
-                <a href="#" class="eachLink">Blog</a>
-                <a href="#" class="eachLink">Contact</a>
+                <li><a href="https://softrinvestment.com/aboutus.html" target="_blank">About</a></li>
+                <li><a href="https://softrinvestment.com/contact.html" target="_blank">Contact</a></li>
             </div>
 
             <div class="footerlink">
-                <h1 class="linkTitle">Service</h1>
-                <a href="#" class="eachLink">Mining</a>
-                <a href="#" class="eachLink">Control Data</a>
-                <a href="#" class="eachLink">Design</a>
-                <a href="#" class="eachLink">Security</a>
+                <li><a href="https://softrinvestment.com/invest.html" target="_blank">Service</a></li>
             </div>
 
             <div class="footerlink">
@@ -445,10 +439,11 @@
         </div>
 
         <div class="footerCopyright">
-             <p>&copy; 2023 design and developed by <a href="#" class="developedBy">Programming Insider</a>.</p>
+             <p>&copy; 2025 design and developed by <a href="#" class="developedBy">Sofr R Investment</a>.</p>
         </div>
     </footer>
     
+
     <script src="./script.js"></script>
 </body>
 </html>
