--- a/contact.html
+++ b/contact.html
@@ -109,13 +109,13 @@
     <!-- Mobile Menu -->
     <nav class="mobile-menu" id="mobileMenu">
         <ul class="menu-list">
-            <li><a href="https://www.home.com">Home</a></li>
-            <li><a href="https://www.ab.com">About Us</a></li>
-            <li><a href="https://www.bn.cv">Invest</a></li>
-            <li><a href="https://www.bn.cv">Reviews</a></li>
-            <li><a href="https://www.bn.cv">Contact Us</a></li>
-            <li><a href="https://www.bn.cv">Go To My Account</a></li>
-            <li><a href="https://www.bn.cv">Go To My Profile</a></li>
+            <li><a href="https://softrinvestment.com/index.html">Home</a></li>
+            <li><a href="https://https://softrinvestment.com/aboutus.html">About Us</a></li>
+            <li><a href="https://https://softrinvestment.com/invest.html">Invest</a></li>
+            <li><a href="https://https://softrinvestment.com/review.html">Reviews</a></li>
+            <li><a href="https://https://softrinvestment.com/contact.html">Contact Us</a></li>
+            <li><a href="https://www.softrinvestment.online/user-profile">Go To My Profile</a></li>
+            <li><a href="https://www.softrinvestment.online/user-profile">Go To My Profile</a></li>
         </ul>
     </nav>
 
@@ -235,7 +235,6 @@
   data-design="classic"
   data-coin-ids="1,166,25062"></div>
 
-    <!-- footer -->
     <footer>
         <div class="joinSection">
             <div class="joinDesc">
@@ -244,9 +243,10 @@
                     Once you have created your account, you can purchase coins from website
                 </p>
             </div>
-            <button class="btn primaryBtn">JOIN NOW</button>
+            <a href="https://www.softrinvestment.online/sign-in" class="btn primaryBtn">JOIN NOW</a>
         </div>
-
+<script src="https://widgets.coingecko.com/gecko-coin-price-chart-widget.js"></script>
+<gecko-coin-price-chart-widget locale="en" dark-mode="true" transparent-background="true" outlined="true" initial-currency="zar"></gecko-coin-price-chart-widget>
         <div class="footerlinksContainer">
             <div class="footerAboutus">
                 <img src="./img/logo-white.png" alt="">
@@ -264,18 +264,12 @@
 
             <div class="footerlink">
                 <h1 class="linkTitle">Explore</h1>
-                <a href="#" class="eachLink">About us</a>
-                <a href="#" class="eachLink">FAQ</a>
-                <a href="#" class="eachLink">Blog</a>
-                <a href="#" class="eachLink">Contact</a>
+                <li><a href="https://softrinvestment.com/aboutus.html" target="_blank">About</a></li>
+                <li><a href="https://softrinvestment.com/contact.html" target="_blank">Contact</a></li>
             </div>
 
             <div class="footerlink">
-                <h1 class="linkTitle">Service</h1>
-                <a href="#" class="eachLink">Mining</a>
-                <a href="#" class="eachLink">Control Data</a>
-                <a href="#" class="eachLink">Design</a>
-                <a href="#" class="eachLink">Security</a>
+                <li><a href="https://softrinvestment.com/invest.html" target="_blank">Service</a></li>
             </div>
 
             <div class="footerlink">
@@ -287,10 +281,11 @@
         </div>
 
         <div class="footerCopyright">
-             <p>&copy; 2023 design and developed by <a href="#" class="developedBy">Programming Insider</a>.</p>
+             <p>&copy; 2025 design and developed by <a href="#" class="developedBy">Sofr R Investment</a>.</p>
         </div>
     </footer>
+    
 
-    <script src="./script.js"></script>    
+    <script src="./script.js"></script>
 </body>
 </html>
