--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
     <!-- Mobile Menu -->
     <nav class="mobile-menu" id="mobileMenu">
         <ul class="menu-list">
-            <li><a href="https://www.home.com">Home</a></li>
-            <li><a href="https://www.ab.com">About Us</a></li>
-            <li><a href="https://www.bn.cv">Invest</a></li>
-            <li><a href="https://www.bn.cv">Reviews</a></li>
-            <li><a href="https://www.bn.cv">Contact Us</a></li>
-            <li><a href="https://www.bn.cv">Go To My Account</a></li>
-            <li><a href="https://www.bn.cv">Go To My Profile</a></li>
+            <li><a href="https://softrinvestment.com/index.html">Home</a></li>
+            <li><a href="https://https://softrinvestment.com/aboutus.html">About Us</a></li>
+            <li><a href="https://https://softrinvestment.com/invest.html">Invest</a></li>
+            <li><a href="https://https://softrinvestment.com/review.html">Reviews</a></li>
+            <li><a href="https://https://softrinvestment.com/contact.html">Contact Us</a></li>
+            <li><a href="https://www.softrinvestment.online/user-profile">Go To My Profile</a></li>
+            <li><a href="https://www.softrinvestment.online/user-profile">Go To My Profile</a></li>
         </ul>
     </nav>
 
