--- a/invest.html
+++ b/invest.html
@@ -215,8 +215,8 @@
                 <h1 class="planTitle">Starter Plan</h1>
                 <p class="planPrice">Plan Price: $26/R467</p>
                 <h3>2Hours Profit: $57 / 6Hours Profit: $67</h3>
+                </div>
                 <a href="https://www.softrinvestment.online/how-to-Pay" class="btn planBtn">Buy Plan</a>
-
             </div>
         </div>
         <div class="eachPlan">
@@ -225,8 +225,8 @@
                 <h1 class="planTitle">Advance Plan</h1>
                 <p class="planPrice">Plan Price: $76/R1,363</p>
                 <h3>2Hours Profit: $167 / 6Hours Profit: $197</h3>
+                </div>
                 <a href="https://www.softrinvestment.online/how-to-Pay" class="btn planBtn">Buy Plan</a>
-
             </div>
         </div>
         <div class="eachPlan">
@@ -235,8 +235,8 @@
                 <h1 class="planTitle">Pro Plan</h1>
                 <p class="planPrice">Plan Price: $185/R3363</p>
                 <h3>2Hours Profit: $407 / 6Hours Profit: $481</h3>
+                </div>
                 <a href="https://www.softrinvestment.online/how-to-Pay" class="btn planBtn">Buy Plan</a>
-
             </div>
         </div>
         <div class="eachPlan">
@@ -245,8 +245,8 @@
                 <h1 class="planTitle">Expert Plan</h1>
                 <p class="planPrice">Plan Price: $240/R4340</p>
                 <h3>2Hours Profit: $528 / 6Hours Profit: $624</h3>
+                </div>
                 <a href="https://www.softrinvestment.online/how-to-Pay" class="btn planBtn">Buy Plan</a>
-
             </div>
         </div>
         <div class="eachPlan">
@@ -255,8 +255,8 @@
                 <h1 class="planTitle">Max Plan</h1>
                 <p class="planPrice">Plan Price: $1,006/R18657</p>
                 <h3>2Hours Profit: $2006 / 6Hours Profit: $6006</h3>
+                </div>
                 <a href="https://www.softrinvestment.online/how-to-Pay" class="btn planBtn">Buy Plan</a>
-
             </div>
         </div>
         <div class="eachPlan">
@@ -265,7 +265,8 @@
                 <h1 class="planTitle">Custom Plan</h1>
                 <p class="planPrice">Plan Price: $10 To $10,000</p>
                 <h3>Profit: $57 Up to $900007</h3>
-                <button class="btn planBtn">Custom Plan</button>
+                </div>
+                <a href="https://www.softrinvestment.online/how-to-Pay" class="btn planBtn">Buy Plan</a>
             </div>
         </div>
     </div>
