--- a/invest.html
+++ b/invest.html
@@ -295,15 +295,19 @@
     }
     .planContent {
         text-align: left;
+        margin-bottom: 10px;
     }
     .planTitle {
         font-size: 18px;
         font-weight: bold;
         color: black;
+        margin-bottom: 10px;
     }
     .planPrice, .eachPlan h3 {
         font-size: 14px;
         color: black;
+        margin-bottom: 10px;
+
     }
     .planBtn {
         background-color: #5b6ee1;
@@ -313,6 +317,7 @@
         border-radius: 20px;
         cursor: pointer;
         transition: 0.3s;
+        margin-top: 10px;
     }
     .planBtn:hover {
         background-color: #3e50d4;
